syntax = "proto3";

option java_package = "ai.grakn.rpc.proto";
option java_outer_classname = "GrpcIterator";

/*
    Request next query result.
    After this message, the server will send a `QueryResult` or a `Done` message and then accept a command message.
*/
message Next {
    IteratorId iteratorId = 1;
}

/*
    Tell the server we have finished executing a query.
    After this message, the server will send a `Done` message and then accept a command message.
*/
message Stop {
    IteratorId iteratorId = 1;
}

message IteratorId {
    int32 id = 1;
}
